# llm-forward

./: .gitignore  README.md  config_example.yaml  pyproject.toml
backend/: auth.py  main.py  proxy.py
backend/config/: __init__.py  config_schema.py  config_store.py  config_watcher.py
backend/usage/: __init__.py  models.py  usage_jsonl_writer.py  usage_sink.py
scripts/: jsonl_to_parquet.py
tests/: test_backend_auth.py  test_backend_config.py  test_backend_proxy.py  test_openai.py  test_qwen.py  test_seed.py
webui/: app.py
webui/components/: key_editor.py  provider_editor.py  sidebar.py  system_status.py  usage_dashboard.py
webui/core/: config_io.py  gateway_api.py  paths.py
webui/utils/: parsing.py
